<resources>
    <string name="app_name">myNotes</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mNotes">Мои заметки</string>
    <string name="mLink">Связаться с нами</string>
    <string name="mAbout">О программе</string>
    <string name="mSettings">Настройки</string>
    <string name="mSync">Синхронизация</string>
    <string name="menu_devider">Связь</string>
    <string name="Notes">Заметки</string>
</resources>
