<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notes_menu"
            android:icon="@drawable/notes_menu_icon"
            android:title="@string/mNotes" />
        <item
            android:id="@+id/about_menu"
            android:icon="@drawable/about_menu_icon"
            android:title="@string/mAbout" />
        <item
            android:id="@+id/settings_menu"
            android:icon="@drawable/setting_menu_icon"
            android:title="@string/mSettings" />
    </group>

    <item android:title="@string/menu_devider">
        <menu>
            <item
                android:id="@+id/sync_menu"
                android:icon="@drawable/sync_menu_icon"
                android:title="@string/mSync" />
            <item
                android:id="@+id/link_us_menu"
                android:icon="@drawable/link_menu_icon"
                android:title="@string/mLink" />
        </menu>
    </item>

</menu>
